# inventory-replenishment-rl

./: .gitignore  BUSINESS_MEMO.md  EVALUATION_REPORT.md  FAILURE_AND_SAFETY_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  Instructions.md  MDP_SPEC.md  Makefile  PROJECT_BRIEF.md  README.md  REWARD_HACKING_AUDIT.md  SUBMISSION_CHECKLIST.md  TRAINING_REPORT.md  pyproject.toml
config/: mdp_config.json  q_learning_config.json  state_action_encoding.json
scripts/: audit_reward.py  demo_policy.py  evaluate_baselines.py  evaluate_learned_policy.py  final_submission_audit.py  generate_simulator_evidence.py  train_q_learning.py  validate_mdp_design.py  verify_artifacts.py  verify_evaluation_artifacts.py  verify_training_artifacts.py
src/inventory_replenishment_rl/: __init__.py  baseline_evaluation.py  evaluation.py  mdp_design.py  policies.py  q_learning.py  reward.py  simulator.py
tests/: test_evaluation.py  test_mdp_design.py  test_policies.py  test_q_learning.py  test_reward.py  test_scaffold.py  test_simulator.py
