[project]
name = "inventory-replenishment-rl"
version = "0.1.0"
description = "A tabular Q-learning project for simulated five-product inventory replenishment."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10,<4",
    "numpy>=2.2,<3",
    "pandas>=2.2,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inventory_replenishment_rl"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
